--- a/resume2.html
+++ b/resume2.html
@@ -23,12 +23,12 @@
 </head>
 
 <body>
-    <nav id="navbar" class="sticky top-0 z-10 rounded bg-sky-900 px-2 py-2 dark:bg-gray-900 sm:px-4"
+    <nav id="navbar" class="sticky top-0 z-10 rounded bg-pink-400 px-2 py-2 dark:bg-pink-400 sm:px-4"
         data-aos="fade-down">
         <div class="container mx-auto flex flex-wrap items-center justify-between">
             <a href="index.html" class="flex items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                    stroke="currentColor" class="h-6 w-6 text-white hover:opacity-80">
+                    stroke="currentColor" class="h-6 w-6 text-black hover:opacity-80">
                     <path stroke-linecap="round" stroke-linejoin="round"
                         d="M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
                 </svg>
@@ -48,23 +48,23 @@
                 <ul class="flex flex-col p-4 md:mt-0 md:flex-row md:space-x-8 md:border-0 md:text-sm md:font-medium">
                     <li>
                         <a href="#"
-                            class="nav-link block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Introduction</a>
+                            class="nav-link block rounded py-2 pr-4 pl-3 text-lg text-black hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Introduction</a>
                     </li>
                     <li>
                         <a href="#about"
-                            class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">About</a>
+                            class="block rounded py-2 pr-4 pl-3 text-lg text-black hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">About</a>
                     </li>
                     <li>
                         <a href="#resume"
-                            class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Resume</a>
+                            class="block rounded py-2 pr-4 pl-3 text-lg text-black hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Resume</a>
                     </li>
                     <li>
                         <a href="#contact"
-                            class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Contact</a>
+                            class="block rounded py-2 pr-4 pl-3 text-lg text-black hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Contact</a>
                     </li>
                     <li>
                         <a href="resume1.html"
-                            class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">patantiw</a>
+                            class="block rounded py-2 pr-4 pl-3 text-lg text-black hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">patantiw</a>
                     </li>
                 </ul>
             </div>
@@ -74,8 +74,8 @@
     <section id="home" class="flex flex-col justify-center">
         <div id="layout" class="stars -z-10"></div>
         <div class="container flex flex-col items-center justify-center" data-aos="flip-left" data-aos-delay="200">
-            <h1 class="font-sans text-6xl font-bold text-sky-700">Resume 2</h1>
-            <p class="my-3 text-3xl font-semibold text-sky-600">
+            <h1 class="font-sans text-6xl font-bold text-pink-400">Resume 2</h1>
+            <p class="my-3 text-3xl font-semibold text-pink-400">
                 Name:
                 <span class="typed" data-typed-items="Tus Suksamran"></span>
             </p>
@@ -87,13 +87,13 @@
             </div>
             <div class="social-links mt-4">
                 <a href="https://www.facebook.com/Tus.suksamran" class="facebook m-2" target="_blank"><i
-                        class="bx bxl-facebook text-5xl text-sky-600 hover:opacity-70"></i></a>
+                        class="bx bxl-facebook text-5xl text-pink-400 hover:opacity-70"></i></a>
                 <a href="https://www.instagram.com/imilway.k/" class="instagram m-2" target="_blank"><i
-                        class="bx bxl-instagram text-5xl text-sky-600 hover:opacity-70"></i></a>
+                        class="bx bxl-instagram text-5xl text-pink-400 hover:opacity-70"></i></a>
                 <a href="https://www.linkedin.com/in/pakorn-tantiwutthiphat-66a6b7246/" class="linkedin m-2"
-                    target="_blank"><i class="bx bxl-linkedin text-5xl text-sky-600 hover:opacity-70"></i></a>
+                    target="_blank"><i class="bx bxl-linkedin text-5xl text-pink-400 hover:opacity-70"></i></a>
                 <a href="https://www.youtube.com/watch?v=OoQLoKHhohg" class="discord m-2" target="_blank"><i
-                        class="bx bxl-discord text-5xl text-sky-600 hover:opacity-70"></i></a>
+                        class="bx bxl-discord text-5xl text-pink-400 hover:opacity-70"></i></a>
             </div>
         </div>
     </section>
@@ -102,12 +102,12 @@
         <section id="about" class="mt-4 xl:pt-24">
             <div class="container" data-aos="fade-up">
                 <div>
-                    <h2 class="mt-4 pt-4 text-center text-5xl font-bold text-sky-900">
+                    <h2 class="mt-4 pt-4 text-center text-5xl font-bold text-pink-400">
                         About
                     </h2>
                     <div class="relative mb-4 mt-4 flex items-center justify-center py-2">
                         <div class="w-8 border-2 border-gray-400"></div>
-                        <div class="w-12 border-4 border-sky-700"></div>
+                        <div class="w-12 border-4 border-pink-400"></div>
                         <div class="w-8 border-2 border-gray-400"></div>
                     </div>
 
@@ -172,12 +172,12 @@
         <section id="resume" class="resume">
             <div class="container" data-aos="fade-left">
                 <div>
-                    <h2 class="mt-4 pt-4 text-center text-5xl font-bold text-sky-900">
+                    <h2 class="mt-4 pt-4 text-center text-5xl font-bold text-pink-400">
                         Resume
                     </h2>
                     <div class="relative mb-4 mt-4 flex items-center justify-center py-2">
                         <div class="w-8 border-2 border-gray-400"></div>
-                        <div class="w-12 border-4 border-sky-700"></div>
+                        <div class="w-12 border-4 border-pink-400"></div>
                         <div class="w-8 border-2 border-gray-400"></div>
                     </div>
                     <p class="text-lg font-semibold">
@@ -192,7 +192,7 @@
 
                 <div class="lg:grid lg:grid-cols-2 lg:flex-row">
                     <div class="lg:col-span-1">
-                        <h3 class="mb-2 pt-2 text-start text-3xl font-semibold text-gray-800">
+                        <h3 class="mb-2 pt-2 text-start text-3xl font-semibold text-white-800">
                             Summary
                         </h3>
                         <div class="resume-item pb-0">
@@ -204,7 +204,7 @@
                             </ul>
                         </div>
 
-                        <h3 class="mb-2 pt-2 text-start text-3xl font-semibold text-gray-800">
+                        <h3 class="mb-2 pt-2 text-start text-3xl font-semibold text-white-800">
                             Education
                         </h3>
                         <div class="resume-item pb-0">
@@ -218,7 +218,7 @@
                         </div>
                     </div>
                     <div class="lg:col-span-1">
-                        <h3 class="mb-2 pt-2 text-start text-3xl font-semibold text-gray-800">
+                        <h3 class="mb-2 pt-2 text-start text-3xl font-semibold text-white-800">
                             Professional Experience
                         </h3>
                         <div class="resume-item lg:ml-2">
@@ -247,27 +247,27 @@
             <section id="skills" class="skills section-bg">
                 <div class="container" data-aos="fade-right">
                     <div>
-                        <h2 class="mt-4 pt-4 text-center text-5xl font-bold text-sky-900">
+                        <h2 class="mt-4 pt-4 text-center text-5xl font-bold text-pink-400">
                             Skills
                         </h2>
                         <div class="relative mb-4 mt-4 flex items-center justify-center py-2">
-                            <div class="w-8 border-2 border-gray-400"></div>
-                            <div class="w-12 border-4 border-sky-700"></div>
-                            <div class="w-8 border-2 border-gray-400"></div>
+                            <div class="w-8 border-2 border-black-400"></div>
+                            <div class="w-12 border-4 border-pink-400"></div>
+                            <div class="w-8 border-2 border-black-400"></div>
                         </div>
                         <p class="text-lg font-bold">
                             This will give a rough idea of my skill level.
                         </p>
                     </div>
                     <div class="relative flex items-center py-2">
-                        <div class="flex-grow border-t border-gray-400"></div>
-                        <span class="mx-4 flex-shrink text-gray-400">Content</span>
-                        <div class="flex-grow border-t border-gray-400"></div>
+                        <div class="flex-grow border-t border-white-400"></div>
+                        <span class="mx-4 flex-shrink text-white-400">Content</span>
+                        <div class="flex-grow border-t border-white-400"></div>
                     </div>
                     <div class="skills-content flex flex-col pt-4 lg:grid lg:grid-cols-2 lg:flex-row">
                         <div class="lg:col-span-1 lg:mr-2">
                             <div class="progress">
-                                <span class="skill">HTML <i class="val">50%</i></span>
+                                <span class="skill text-white" >HTML <i class="val">50%</i></span>
                                 <div class="progress-bar-wrap">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0"
                                         aria-valuemax="100"></div>
@@ -275,7 +275,7 @@
                             </div>
 
                             <div class="progress">
-                                <span class="skill">CSS <i class="val">50%</i></span>
+                                <span class="skill text-white">CSS <i class="val">50%</i></span>
                                 <div class="progress-bar-wrap">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0"
                                         aria-valuemax="100"></div>
@@ -283,14 +283,14 @@
                             </div>
 
                             <div class="progress">
-                                <span class="skill">JavaScript <i class="val">50%</i></span>
+                                <span class="skill text-white">JavaScript <i class="val">50%</i></span>
                                 <div class="progress-bar-wrap">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0"
                                         aria-valuemax="100"></div>
                                 </div>
                             </div>
                             <div class="progress">
-                                <span class="skill">ReactJS <i class="val">50%</i></span>
+                                <span class="skill text-white">ReactJS <i class="val">50%</i></span>
                                 <div class="progress-bar-wrap">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0"
                                         aria-valuemax="100"></div>
@@ -300,22 +300,14 @@
 
                         <div class="lg:col-span-1 lg:ml-2">
                             <div class="progress">
-                                <span class="skill">C <i class="val">40%</i></span>
+                                <span class="skill text-white">C <i class="val">40%</i></span>
                                 <div class="progress-bar-wrap">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0"
                                         aria-valuemax="100"></div>
                                 </div>
                             </div>
                             <div class="progress">
-                                <span class="skill">C++<i class="val">40%</i></span>
-                                <div class="progress-bar-wrap">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0"
-                                        aria-valuemax="100"></div>
-                                </div>
-                            </div>
-
-                            <div class="progress">
-                                <span class="skill">C#<i class="val">40%</i></span>
+                                <span class="skill text-white">C++<i class="val">40%</i></span>
                                 <div class="progress-bar-wrap">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0"
                                         aria-valuemax="100"></div>
@@ -323,7 +315,15 @@
                             </div>
 
                             <div class="progress">
-                                <span class="skill">Mysql<i class="val">35%</i></span>
+                                <span class="skill text-white">C#<i class="val">40%</i></span>
+                                <div class="progress-bar-wrap">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0"
+                                        aria-valuemax="100"></div>
+                                </div>
+                            </div>
+
+                            <div class="progress">
+                                <span class="skill text-white">Mysql<i class="val">35%</i></span>
                                 <div class="progress-bar-wrap">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="35" aria-valuemin="0"
                                         aria-valuemax="100"></div>
@@ -373,7 +373,7 @@
                             </div>
                             <div class="rounded-md shadow">
                                 <button type="submit"
-                                    class="mt-2 flex w-full items-center justify-center rounded-md border border-transparent bg-sky-700 px-8 py-3 text-base font-medium text-white hover:bg-sky-900 md:py-4 md:px-10 md:text-lg">Send
+                                    class="mt-2 flex w-full items-center justify-center rounded-md border-black-400 border-transparent bg-pink-400 px-8 py-3 text-base font-medium text-white hover:bg-pink-400 md:py-4 md:px-10 md:text-lg">Send
                                     message
                             </div>
                         </form>
