--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
       </div>
       <div class="list">
         <div class="list-grid">
-          <a class="mt-12 " href="./Grader.html">Grader</a>
-          <a class="mt-12 " href="./calc.html">Calculator</a>
-          <a class="mt-12 " href="./balloon.html">Balloon</a>
-          <a class="mt-12 " href="./backgroound.html">Background</a>
-          <a class="mt-12 " href="./todolist.html">Todolist</a>
+          <a class="mt-12 text-center align-middle " href="./Grader.html">Grader</a>
+          <a class="mt-12 text-center " href="./calc.html">Calculator</a>
+          <a class="mt-12 text-center " href="./balloon.html">Balloon</a>
+          <a class="mt-12 text-center " href="./backgroound.html">Background</a>
+          <a class="mt-12 text-center " href="./todolist.html">Todolist</a>
         </div>
       </div>
     </div>
