--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </div>
         </div>
       </div>
-      <div class="list">
+      <div class="list mt-4">
         <div class="list-grid">
           <a class="py-24 text-center" href="./Grader.html">Grader</a>
           <a class="py-24 text-center" href="./calc.html">Calculator</a>
