--- a/grader.html
+++ b/grader.html
@@ -55,7 +55,7 @@
           </li>
           <li>
             <a href="./balloon.html"
-              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Ballon</a>
+              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Balloon</a>
           </li>
           <li>
             <a href="./calc.html"
