--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </div>
       <div class="list mt-4">
         <div class="list-grid">
-          <a class="py-24 text-center" href="./Grader.html">Grader</a>
+          <a class="py-24 text-center" href="./grader.html">Grader</a>
           <a class="py-24 text-center" href="./calc.html">Calculator</a>
           <a class="py-24 text-center" href="./balloon.html">Balloon</a>
           <a class="py-24 text-center" href="./backgroound.html">Background</a>
