--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <div class="mt-40 flex flex-col items-center justify-center">
             <p>Resume 1</p>
             <div class="mt-4 sm:mt-0 sm:ml-3">
-              <a href="resume1.html"
+              <a href="./public/html/resume1.html"
                 class="flex w-full items-center justify-center rounded-md border border-transparent bg-sky-100 px-8 py-3 text-base font-medium text-gray-800 hover:bg-indigo-200 md:py-4 md:px-10 md:text-lg">patantiw</a>
             </div>
           </div>
@@ -69,7 +69,7 @@
           <div class="mt-40 flex flex-col items-center justify-center">
             <p>Resume 2</p>
             <div class="mt-4 sm:mt-0 sm:ml-3">
-              <a href="resume2.html"
+              <a href="./public/html/resume2.html"
                 class="flex w-full items-center justify-center rounded-md border border-transparent bg-sky-100 px-8 py-3 text-base font-medium text-gray-800 hover:bg-indigo-200 md:py-4 md:px-10 md:text-lg">tsuksamr</a>
             </div>
           </div>
@@ -77,11 +77,11 @@
       </div>
       <div class="list mt-4">
         <div class="list-grid">
-          <a class="py-24 text-center" href="./grader.html">Grader</a>
-          <a class="py-24 text-center" href="./calc.html">Calculator</a>
-          <a class="py-24 text-center" href="./balloon.html">Balloon</a>
-          <a class="py-24 text-center" href="./backgroound.html">Background</a>
-          <a class="py-24 text-center" href="./todolist.html">Todolist</a>
+          <a class="py-24 text-center" href="./public/html/grader.html">Grader</a>
+          <a class="py-24 text-center" href="./public/html/calc.html">Calculator</a>
+          <a class="py-24 text-center" href="./public/html/balloon.html">Balloon</a>
+          <a class="py-24 text-center" href="./public/html/backgroound.html">Background</a>
+          <a class="py-24 text-center" href="./public/html/todolist.html">Todolist</a>
         </div>
       </div>
     </div>
