--- a/public/html/resume2.html
+++ b/public/html/resume2.html
@@ -7,17 +7,17 @@
     <title>Second Resume</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
-    <link href="public/img/favicon.png" rel="icon" />
-    <link href="public/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="../img/favicon.png" rel="icon" />
+    <link href="../img/apple-touch-icon.png" rel="apple-touch-icon" />
     <link
         href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
         rel="stylesheet" />
-    <link href="public/vendor/aos/aos.css" rel="stylesheet" />
-    <link href="public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="public/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" />
-    <link href="public/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
-    <link href="public/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
-    <link href="public/css/resume2.css" rel="stylesheet" />
+    <link href="../vendor/aos/aos.css" rel="stylesheet" />
+    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" />
+    <link href="../vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
+    <link href="../vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+    <link href="../css/resume2.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
     <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
 </head>
@@ -124,8 +124,7 @@
 
                 <div class="flex flex-col lg:flex-row lg:pt-2">
                     <div class="mt-4 lg:col-start-1 lg:col-end-3 lg:mr-10 lg:mt-4 lg:w-2/6 lg:pt-12 xl:pt-0">
-                        <img class="rounded-lg h-60 w-100" src="public/img/tliangso.png"
-                            alt="Tliangso terrorized people" />
+                        <img class="rounded-lg h-60 w-100" src="../img/tliangso.png" alt="Tliangso terrorized people" />
                     </div>
                     <div class="mt-4 pt-4 lg:col-span-4 lg:col-end-7 lg:pt-0">
                         <h2 class="text-bold text-2xl">High School Student</h2>
@@ -407,16 +406,16 @@
                 stroke="currentColor" class="h-6 w-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M12 19.5v-15m0 0l-6.75 6.75M12 4.5l6.75 6.75" />
             </svg> </i></a>
-    <script src="public/vendor/aos/aos.js"></script>
-    <script src="public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="public/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="public/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="public/vendor/typed.js/typed.min.js"></script>
-    <script src="public/vendor/waypoints/noframework.waypoints.js"></script>
-    <script src="public/js/main.js"></script>
+    <script src="../vendor/aos/aos.js"></script>
+    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="../vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="../vendor/typed.js/typed.min.js"></script>
+    <script src="../vendor/waypoints/noframework.waypoints.js"></script>
+    <script src="../js/main.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
-    <script src="./public/js/resume.js"></script>
+    <script src="./../js/resume.js"></script>
 </body>
 
 </html>
