--- a/public/html/backgroound.html
+++ b/public/html/backgroound.html
@@ -5,31 +5,14 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./public/css/style.css" />
-  <title>Grader</title>
-  <link rel="stylesheet" href="./public/css/background.css" />
   <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
-  <style>
-    .content {
-      width: fit-content;
-      margin: 0 auto;
-      margin-top: 50px;
-      background-color: antiquewhite;
-    }
-
-    body {
-      color: black;
-      background-image: url("./public/img/LK-bg.gif");
-      background-size: cover;
-
-    }
-  </style>
+  <title>Background</title>
 </head>
 
 <body>
   <nav id="navbar" class="sticky top-0 z-10 rounded" data-aos="fade-down">
     <div class="container mx-auto flex flex-wrap items-center justify-between">
-      <a href="index.html" class="flex items-center">
+      <a href="../../index.html" class="flex items-center">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
           class="h-6 w-6 text-white hover:opacity-80">
           <path stroke-linecap="round" stroke-linejoin="round"
@@ -37,7 +20,7 @@
         </svg>
       </a>
       <button data-collapse-toggle="navbar-default" type="button"
-        class="ml-3 inline-flex items-center rounded-lg p-2 text-sm text-white hover:bg-sky-600 md:dark:hover:bg-transparent focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-600 md:hidden"
+        class="ml-3 inline-flex items-center rounded-lg p-2 text-sm text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600 md:hidden"
         aria-controls="navbar-default" aria-expanded="false">
         <span class="sr-only">Open main menu</span>
         <svg class="h-6 w-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
@@ -50,16 +33,16 @@
       <div class="hidden w-full md:block md:w-auto" id="navbar-default">
         <ul class="flex flex-col p-4 md:mt-0 md:flex-row md:space-x-8 md:border-0 md:text-sm md:font-medium">
           <li>
-            <a href="./backgroound.html"
-              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">RandBg</a>
+            <a href="./calc.html"
+              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Calculator</a>
           </li>
           <li>
             <a href="./balloon.html"
               class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Balloon</a>
           </li>
           <li>
-            <a href="./calc.html"
-              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Calculator</a>
+            <a href="./grader.html"
+              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Grader</a>
           </li>
           <li>
             <a href="./todolist.html"
@@ -69,17 +52,24 @@
       </div>
     </div>
   </nav>
+  <button class=" flex w-full cursor-pointer items-center justify-center rounded-md border border-transparent
+    bg-indigo-600 py-2 text-base font-medium text-white hover:bg-indigo-700 md:py-4 md:px-10 md:text-lg"
+    onclick="random_bg_color()">Click me!</button>
 
-  <section id="menu" class="flex flex-row items-center justify-center">
-    <div class="content" style="border: 3px solid black; padding: 50px">
-      <h1 id="result"></h1>
+  <script>
+    function random_bg_color() {
+      var symbols, color;
+      symbols = "0123456789ABCDEF";
 
-      <input type="text" id="inp" />
-
-      <button onclick="show()">CLICK ME</button>
-    </div>
-  </section>
-  <script src="./public/js/Grader.js"></script>
+      color = "#";
+      var i;
+      for (i = 0; i < 6; i++) {
+        color = color + symbols[Math.floor(Math.random() * 16)];
+      }
+      document.body.style.background = color;
+    }
+    random_bg_color();
+  </script>
 </body>
 <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
 <script src="https://cdn.tailwindcss.com"></script>
