--- a/public/html/balloon.html
+++ b/public/html/balloon.html
@@ -21,7 +21,7 @@
 
         body {
             color: white;
-            background-image: url("./public/img/first.jpg");
+            background-image: url("../img/first.jpg");
             background-position: center;
             background-size: cover;
             background-attachment: fixed;
@@ -30,7 +30,7 @@
     </style>
     <nav id="navbar" class="sticky top-0 z-10 rounded" data-aos="fade-down">
         <div class="container mx-auto flex flex-wrap items-center justify-between">
-            <a href="index.html" class="flex items-center">
+            <a href="../../index.html" class="flex items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                     stroke="currentColor" class="h-6 w-6 text-white hover:opacity-80">
                     <path stroke-linecap="round" stroke-linejoin="round"
