--- a/public/html/resume2.html
+++ b/public/html/resume2.html
@@ -24,7 +24,7 @@
     <nav id="navbar" class="sticky top-0 z-10 rounded bg-pink-400 px-2 py-2 dark:bg-pink-400 sm:px-4"
         data-aos="fade-down">
         <div class="container mx-auto flex flex-wrap items-center justify-between">
-            <a href="index.html" class="flex items-center">
+            <a href="../../index.html" class="flex items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                     stroke="currentColor" class="h-6 w-6 text-black hover:opacity-80">
                     <path stroke-linecap="round" stroke-linejoin="round"
@@ -406,7 +406,6 @@
             </svg> </i></a>
     <script src="../vendor/aos/aos.js"></script>
     <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="../vendor/swiper/swiper-bundle.min.js"></script>
     <script src="../vendor/typed.js/typed.min.js"></script>
     <script src="../vendor/waypoints/noframework.waypoints.js"></script>
