--- a/public/html/grader.html
+++ b/public/html/grader.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./public/css/style.css" />
+  <link rel="stylesheet" href="../css/style.css" />
   <title>Grader</title>
-  <link rel="stylesheet" href="./public/css/background.css" />
+  <link rel="stylesheet" href="../css/background.css" />
   <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
   <style>
     .content {
@@ -79,7 +79,7 @@
       <button onclick="show()">CLICK ME</button>
     </div>
   </section>
-  <script src="./public/js/Grader.js"></script>
+  <script src="..//js/Grader.js"></script>
 </body>
 <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
 <script src="https://cdn.tailwindcss.com"></script>
