--- a/public/html/todolist.html
+++ b/public/html/todolist.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>To Do List</title>
-  <script src="./public/js/todo.js" defer></script>
+  <script src="../js/todo.js" defer></script>
   <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
   <style>
     body {
