--- a/public/html/resume1.html
+++ b/public/html/resume1.html
@@ -441,8 +441,7 @@
     </div>
   </footer>
 
-  <div id=" preloader">
-  </div>
+  <div id="preloader"></div>
   <a href="#" class="back-to-top flex items-center justify-center"><i>
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
         class="h-6 w-6">
@@ -455,7 +454,7 @@
   <script src="../js/main.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
-  <script src="../js/resume.js"></script>
+  <script src="./../js/resume.js"></script>
 </body>
 
 </html>
