--- a/public/html/todolist.html
+++ b/public/html/todolist.html
@@ -114,7 +114,7 @@
   </nav>
   <div class="header">
     <h1>To Do List</h1>
-    <button class="newBtn" onclick="addnew()">New</button>
+    <button class="newBtn" onclick="popup()">New</button>
   </div>
   <div id="ft_list" class="list"></div>
 </body>
