--- a/public/html/resume1.html
+++ b/public/html/resume1.html
@@ -96,7 +96,7 @@
   </section>
 
   <main id="main">
-    <section id="about" class="mt-4 xl:pt-24">
+    <section id="about" class="mt-4 xl:pt-24 lg:mb-12">
       <div class="container" data-aos="fade-up">
         <div>
           <h2 class="mt-4 pt-4 text-center text-5xl font-bold text-sky-900">
