--- a/public/html/resume2.html
+++ b/public/html/resume2.html
@@ -333,8 +333,13 @@
         </section>
         <section id="contact" class="contact">
             <div class="container" data-aos="fade-down">
-                <div class="section-title">
-                    <h2>Contact</h2>
+                <div>
+                    <h2 class="mt-4 pt-4 text-center text-5xl font-bold text-pink-400">Contact</h2>
+                </div>
+                <div class="relative mb-4 mt-4 flex items-center justify-center py-2">
+                    <div class="w-8 border-2 border-gray-400"></div>
+                    <div class="w-12 border-4 border-pink-400"></div>
+                    <div class="w-8 border-2 border-gray-400"></div>
                 </div>
                 <div class="mt-2 lg:grid lg:grid-cols-3 lg:flex-row">
                     <div class="lg:col-span-1">
@@ -383,7 +388,7 @@
         <div class="container">
             <h3>Tus Suksamran</h3>
             <p>
-                "Let your luck guide the CSS, 2022
+                "Let your luck guide the CSS"
             </p>
             <div class="social-links">
                 <a href="https://www.facebook.com/Tus.suksamran" class="facebook" target="_blank"><i
